# rpg-ros

./: CMakeLists.txt  README.md
calibu_finder/: CMakeLists.txt  package.xml
calibu_finder/action/: Config.action
calibu_finder/launch/: image_conic_detector.launch
calibu_finder/msg/: conicData.msg
calibu_finder/src/nodes/: call_conic.cpp  call_service.cpp  color_segmenter.cpp  conic_locator.cpp  image_annotator.cpp  image_conic_detector.cpp  save_transform.cpp  target_locator.cpp  target_output.cpp
calibu_finder/srv/: conic_locator.srv  target_locator.srv
data_extraction/: CMakeLists.txt  package.xml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/msg/: Arc.msg
feature_tracker/src/: RobustMatcher.cpp  feature_tracker.cpp
include/feature_tracker/: RobustMatcher.h~  feature_tracker.h  feature_tracker.h~
jaguar/: CMakeLists.txt  jaguar.yaml  manifest.xml  package.xml
jaguar/include/: jaguar_base.h  jaguar_consts.h
jaguar/launch/: jaguar_joy.launch  jaguar_solo.launch
jaguar/src/: jaguar_base.cpp  jaguar_joystick.cpp  jaguar_node.cpp  jaguar_test.cpp
ros2node/: CMakeLists.txt  package.xml
ros2node/src/: ros2node_node.cpp
roscam/: CMakeLists.txt  package.xml
roscam/config/: roscam_align_hal.yaml  roscam_align_hal_local.yaml  roscam_asusloop.yaml  roscam_opencv.yaml  two_cams.xml  ximea.xml  ximea.yaml  ximea_2.xml  ximea_2.yaml  xtion.xml
roscam/launch/: roscam_align_hal.launch  roscam_align_hal_local.launch  roscam_asusloop.launch  roscam_opencv.launch  roscam_ximea.launch  roscam_ximea2.launch
roscam/src/: list_devices.cpp  pcl_output.cpp  roscam_node.cpp
src/: RobustMatcher.cpp  feature_tracker.cpp  getArcs.cpp
srv/: GetArcs.srv
(+1 files in other folders)
